--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-google-maps": "^9.4.5",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-scroll": "^1.7.16",
